--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -15,6 +15,7 @@
   .title, .sub-title {
     text-align: center;
     text-shadow: 1.5px 1.5px 5px $darkest;
+    -webkit-text-shadow: 1.5px 1.5px 5px $darkest;
     color: white;
   }
   .title {
@@ -24,8 +25,8 @@
   }
   .sub-title {
     font-family: 'IBM Plex Serif', serif;
-    font-style: italic;
     font-size: $font2;
+    font-style: italic;
   }
   .header-line-break {
     width: 37.5%;
@@ -33,7 +34,6 @@
   }
 }
 
-// title font changes
 @media only screen and (min-width: $large) {
 
   .header-container {
