--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,12 +1,12 @@
 ---
-layout: default
+layout: default_p
 ---
 <div class="main-container">
-  <div class="description-container to-fade-up">
+  <!-- <div class="description-container to-fade-up">
     <hr class="description-line-break">
     <h3 class="description">I've had the privilege of meeting incredible personalities from different walks of life, all with unique goals and personal values. However, one thing they do have in common, is the fact that they had inspired me to be a better version of myself. These are the stories of those individuals.</h3>
     <hr class="description-line-break">
-  </div>
+  </div> -->
 
   <div class="card-container">
     {% for profile in site.profiles %}
