parallax starting to work

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,21 @@
 <header class="header-container">
-  <div class="site-header">
-    <img class="mobile-header" src="/assets/images/headers/tyler_palef.jpg" alt="header profile picture">
-    <div class="header-text">
-      <h1 class="title to-fade-up">The Intro</h1>
-      <hr class="header-line-break to-fade-up">
-      <h2 class="sub-title to-fade-up"> An introduction to introspectives</h2>
+  <div class="parallax-container">
+    <div class="parallax-window" data-parallax="scroll" style="height: 90vh;" data-image-src="{{ page.shadowImage }}">
+      <h2>ajkajdklfjl;aakfaksfj kjda;klf asdj </h2>
     </div>
-  </div>
+    <div class="test">
+        <h1>adsfsafdaffsfsadsfsfsa</h1>
+    </div>
 </header>
+
+
+
+<!--
+<div class="site-header">
+  <img class="mobile-header" src="/assets/images/headers/tyler_palef.jpg" alt="header profile picture">
+  <div class="header-text">
+    <h1 class="title to-fade-up">The Intro</h1>
+    <hr class="header-line-break to-fade-up">
+    <h2 class="sub-title to-fade-up"> An introduction to introspectives</h2>
+  </div>
+</div> -->
