--- a/_sass/animations.scss
+++ b/_sass/animations.scss
@@ -24,3 +24,8 @@
   -ms-transform: translate(0px, 0px);
   transform: translate3d(0px, 0px, 0px);
 }
+
+.parallax-window {
+	min-height: 400px;
+	background: transparent;
+}
