--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="{{site.baseurl}}/assets/js/main.js" ></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="../lightbox/js/lightbox.min.js"></script>
+    <script src="../parallax/parallax.min.js"></script>
 
   </body>
 
