--- a/_sass/cards.scss
+++ b/_sass/cards.scss
@@ -61,8 +61,9 @@
 
 @media only screen and (min-width: $medium) {
   .card-container {
-    grid-gap: 2rem;
+    grid-gap: 1rem;
     padding: 1rem;
+    padding-top: 100px;
     .card {
     img {
         height: 50vh;
@@ -75,6 +76,7 @@
 
 @media only screen and (min-width: $large) {
   .card-container {
+    padding-top: 150px;
     .card {
       img {
         height: 65vh;
