--- a/_sass/profile_header.scss
+++ b/_sass/profile_header.scss
@@ -17,6 +17,7 @@
 
 .profile-header {
   font-family: 'Oswald', sans-serif;
+  text-align: center;
   h1, h2 {
     padding: 0;
     margin: 0;
@@ -24,7 +25,7 @@
   }
   .profile-header-title {
     font-size: $font2;
-    padding: 2px $fifth1;
+    // padding: 2px $fifth1;
     color: $darkest;
   }
   .profile-header-name {
