maybe should make the parallax part of profile instead of header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,9 @@
 <header class="header-container">
+  <div class="profile-header-container">
+    <div class="profile-header">
+      <a href="/index.html"><h1 class="profile-header-title">The Intro</h1></a>
+    </div>
+  </div>
   <div class="parallax-container">
     <div class="parallax-window" data-parallax="scroll" style="height: 90vh;" data-image-src="{{ page.shadowImage }}">
       <h2>ajkajdklfjl;aakfaksfj kjda;klf asdj </h2>
