finsihed daniel, some cleanup to do, gotta figur eout profiles i guess, maybe just leave it that way?

--- a/_layouts/profile.html
+++ b/_layouts/profile.html
@@ -2,6 +2,17 @@
 layout: default
 ---
 
+<!-- <div class="parallax-container">
+  <div class="parallax-window" data-parallax="scroll" style="height: 90vh;" data-image-src="{{ page.shadowImage }}">
+</div> -->
+<!-- <div class="site-header">
+  <img class="shadow-profile" src="{{ page.shadowImage }}" alt="dark header">
+  <div class="header-text">
+    <h1 class="title to-fade-up">The Intro</h1>
+    <hr class="header-line-break to-fade-up">
+    <h2 class="sub-title to-fade-up">An introduction to introspectives</h2>
+  </div>
+</div> -->
 <div class="profile-wrapper to-fade-up">
   <div class="profile_imgs">
     <a href="{{ page.headImage }}" data-lightbox="{page.firstName}">
