--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,15 +2,9 @@
   <div class="profile-header-container">
     <div class="profile-header">
       <a href="/index.html"><h1 class="profile-header-title">The Intro</h1></a>
+      <h2 class="profile-header-name">{{ page.firstName }} {{ page.lastName }}</h2>
     </div>
   </div>
-  <div class="parallax-container">
-    <div class="parallax-window" data-parallax="scroll" style="height: 90vh;" data-image-src="{{ page.shadowImage }}">
-      <h2>ajkajdklfjl;aakfaksfj kjda;klf asdj </h2>
-    </div>
-    <div class="test">
-        <h1>adsfsafdaffsfsadsfsfsa</h1>
-    </div>
 </header>
 
 
