--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,5 +1,5 @@
 .site-header {
-  .mobile-header {
+  .shadow-profile {
     height: 100vh;
     object-fit: cover;
   }
@@ -36,21 +36,6 @@
 
 @media only screen and (min-width: $large) {
 
-  .header-container {
-    width: 100%;
-    height: 100%;
-    // background-image: url(/assets/images/headers/yannie_lo.jpg);
-    top: 0px;
-
-  // parallax
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    .mobile-header {
-      display: none;
-    }
-  }
   .site-header {
     .title {
       font-size: $font6;
