--- a/_sass/profile.scss
+++ b/_sass/profile.scss
@@ -6,6 +6,14 @@
     line-height: 1.65em;
     padding-bottom: $fifth2;
   }
+  .intro-word {
+    padding-left: 3%;
+    padding-right: 3%;
+  }
+  .question, p {
+    padding-left: 2%;
+    padding-right: 2%;
+  }
   .question {
     color: $darkest;
     font-weight: bold;
@@ -21,7 +29,7 @@
 }
 
 .profile-title {
-  padding-top: 10%;
+  // padding-top: 10%;
   text-align: center;
   .profile-name {
     font-family: 'Oswald', sans-serif;
