--- a/_sass/profile_header.scss
+++ b/_sass/profile_header.scss
@@ -32,7 +32,7 @@
     font-size: $font1;
     color: $darker;
     border-left: 1px solid $darker;
-    padding-left: $fifth1;
+    padding-left: 4px;
   }
 }
 
@@ -50,6 +50,7 @@
     .profile-header-name {
       font-size: $font2;
       margin: 7.5px 0;
+      padding-left: $fifth1;
     }
   }
 
