--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -22,6 +22,7 @@
     font-size: $font5;
     margin-bottom: 0;
     margin-top: 0;
+    line-height: 1.15em;
   }
   .sub-title {
     font-family: 'IBM Plex Serif', serif;
